--- a/app/menu/styles/MenuCard.module.scss
+++ b/app/menu/styles/MenuCard.module.scss
@@ -2,4 +2,14 @@
   height: 280px;
   width: 270px;
   background-color: #BBBBBB;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 35px;
+}
+
+.foodImage {
+  position: fixed;
+  top: 75px;
 }
