--- a/app/menu/styles/MenuCard.module.scss
+++ b/app/menu/styles/MenuCard.module.scss
@@ -1,15 +1,55 @@
+$cardColor: rgba(187, 187, 187, 0.19);
+$shadowColor: rgba(0, 0, 0, 0.1);
+
 .card {
-  height: 280px;
-  width: 270px;
-  background-color: #BBBBBB;
+  width: 280px;
+  min-width: 280px;
+  max-width: 280px;
+  height: 320px;
+  background-color: $cardColor;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  box-shadow: 0px 4px 10px $shadowColor;
+  padding: 15px;
+  text-align: center;
+  flex-shrink: 0;
+}
+
+.foodImageDiv {
+  width: 200px;
+  height: 200px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 35px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  margin-top: -100px;
+  background-color: white;
 }
 
 .foodImage {
-  position: fixed;
-  top: 75px;
+  width: 100%;
+  height: auto; // Allows full image visibility
+  border-radius: 50%;
+  object-fit: contain;
+}
+
+.foodDetailDiv {
+  margin-top: 20px;
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 13px;
+  font-size: 20px;
+}
+
+.price {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
 }
